--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -17,6 +17,7 @@
     position: relative;
     z-index: 1;
     width: 100%;
+    padding-bottom: 2rem;
 
     .tab-content-wrapper {
       width: 100%;
